# embassy-pico-test

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
