[package]
name = "embassy-pico-test"
version = "0.1.0"
edition = "2024"
authors = ["Piers Finlayson <piers@piers.rocks>"]
description = "Testing embassy-rs on the Raspberry Pi Pico"
repository = "https://github.com/piersfinlayson/embassy-pico-test"
readme = "README.md"
license = "MIT"
keywords = ["pico", "raspberry pi", "embassy-rs", "embedded"]

[features]
default = ["pico"]
pico = ["embassy-rp/rp2040"]
pico2 = ["embassy-rp/rp235xa"]
single-gpio = []
1 = []
2 = []
3 = []
4 = []
5 = []
6 = []
7 = []
8 = []
9 = []
10 = []
11 = []
12 = []
13 = []
14 = []
15 = []
16 = []
17 = []
18 = []
19 = []
20 = []
21 = []
22 = []
23 = []
24 = []
25 = []

[[bin]]
name = "timing"
path = "src/bin/timing.rs"


[dependencies]
# embassy-rs crates - Note these are patched below to use a later version from
# git.
embassy-executor = { version = "0.7", features = ["task-arena-size-32768", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.3", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "binary-info", "intrinsics",] }
embassy-usb = { version = "0.4", features = ["defmt"] }
embassy-futures = { version = "0.1" }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-time = { version = "0.4", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-embedded-hal = { version = "0.3" }
cyw43 = { version = "0.3", package = "cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.3", package = "cyw43-pio", features = ["defmt"] }

# Required for embassy on Raspberry Pi (Cortex M0)
cortex-m = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"

# Required to use embassy_time::delay::DelayNs
embedded-hal = "1.0"

# Required for StaticCell and ConstStaticCell
static_cell = { version = "2.1" }
portable-atomic = { version = "1.10", features = ["critical-section"] }

# Required for heapless::{String, Vec}
heapless = { version = "0.8" }

# defmt (for RTT logging)
defmt = "0.3"
defmt-rtt = "0.4"

# Required for Debug Probe panic support
panic-probe = { version = "0.3", features = ["print-defmt"] }

# Allows us to handle bitflags gracefully
bitflags = "2.8"

# Provides static asserts
static_assertions = "1.1"

# embassy on crates.io doesn't seem to be very up to date.  Therefore we need
# to patch with a later version from the git repository.  The commit was
# chosen based on the HEAD on 2025-03-11, 06:45 + 00:00.
[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "a704c41a368b3a48751d58f5e5227f1fb8fc621c" }

[profile.release]
debug = 2

[profile.dev]
debug = 2
lto = true
opt-level = "z"
